[tool.poetry]
name = "mapsheightbase"
version = "0.1.0"
description = ""
authors = ["barak-kapach <barak.kapach@mail.huji.ac.il>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
